# libkfdialog

./: CMakeLists.txt  LibKFDialogConfig.cmake.in  README.md  dialogbase.cpp  dialogbase.h  dialogstatesaver.cpp  dialogstatesaver.h  dialogstatewatcher.cpp  dialogstatewatcher.h  imagefilter.cpp  imagefilter.h  recentsaver.cpp  recentsaver.h
